[gd_scene load_steps=7 format=2]

[ext_resource path="res://recursos/modelos/hud/Kenney Pixel Square.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://juego/HUD/MenuIntermedio.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 8
outline_color = Color( 0, 0.278431, 0.121569, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
outline_size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.113725, 0.105882, 0, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = ExtResource( 1 )

[node name="MenuIntermedio" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
pantalla_carga = "res://juego/Menus/PantallaCarga.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.145098, 0.00784314, 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -284.104
margin_right = 500.0
margin_bottom = -161.104
custom_fonts/font = SubResource( 1 )
text = "Â¡Nivel Completado!
"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -115.274
margin_right = 500.0
margin_bottom = 106.726
custom_fonts/font = SubResource( 2 )
text = "Puntaje Conseguido:
X
"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonNivelSiguiente" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -172.5
margin_top = -230.408
margin_right = 172.5
margin_bottom = -82.4078
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Nivel Siguiente"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="BotonNivelSiguiente" to="." method="_on_BotonNivelSiguiente_pressed"]
